2005-02-28 Andy Rice
	* ai.cpp, game.cpp, game.h, global_data.cpp, global_data.h, gun_shell.cpp, gun_shell.h,
	  keys.cpp, keys.h, ship.cpp, ship.h, sub_torpedo_display.cpp, submarine.cpp,
	  submarine.h, submmarine_interface.cpp, subsim.cpp, user_interface.cpp, user_interface.h	
	* corvette.xml, destroyer_oclass.xml, destroyer_tribal.xml, english.text, german.text, 
	  italien.text, submarine_IXc40.xml, submarine_VIIc.xml, submarine_XXI.xml
	  - More deck gun/ships gun work and more sound effects.
2005-02-24 Andy Rice
	* crosssection.cpp, damagemodel.cpp, viewmodel.cpp
	  - crosssection.exe, damagemodel.exe & viewmodel.exe can compile on Windows 
	* game.cpp, global_data.cpp, global_data.h, sound.cpp, user_interface.cpp, user_interface.h
	  - added files: ping.ogg, shell splash.ogg, shell explosion.ogg, small gun firing.ogg
	  	big gun firing.ogg, depth charge launching.ogg, deck gun firing.ogg, 
	  	depth charge exploding.ogg
	  - added new sound effects for weapons and explosions
2005-02-20  Thorsten Jordan  <thorsten_jordan@gmx.de>
	* many files
	  - made bearing switchable between relative and absolute values
	  - store pointer to game in user_interface simplifying many
	    functions

2005-02-16 Andy Rice
	* SConstruct, SConscript
		- Updated so everything builds on Mac OSX

2005-02-13  Thorsten Jordan  <thorsten_jordan@gmx.de>
	* read keys by name from config file and not by number
	 - will avoid problems when adding new keys somewhere in the mid of
           the key list
	* make water detail configureable by config file

2005-02-12  Thorsten Jordan  <thorsten_jordan@gmx.de>
	* fixed some keys
	* added analogue clock to periscope screen

2005-02-07  Thorsten Jordan  <thorsten_jordan@gmx.de>
	* texture.cpp
	 - automatic resizing of too large textures
	   to video card limit
	   (e.g. Voodoo3 has max. 256 sized textures)

2005-02-06  Andrew Rice
	* many files
	 - added code for deck gun simulation and shooting
